syntax = "proto3";
package ironpdfengineproto;
import "basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message PdfiumCompressImagesRequestP {
  PdfDocumentP document = 1;
  int32 quality = 2;
  bool  scale_to_visible_size = 3;
}


message PdfiumRemoveStructTreeRequestP {
  PdfDocumentP document = 1;
}
